@@ -37,6 +37,7 @@
 namespace scheme {
 
     ucs4string utf8ToUtf32(const char* s, int len);
+    ucs4string utf16ToUtf32(const char* s, int len);
     ByteVector* utf32toUtf8(const ucs4string& s);
     Object makeCustomTextualInputOutputPortEx(VM* theVM, int argc, const Object* argv);
     Object makeCustomBinaryInputOutputPortEx(VM* theVM, int argc, const Object* argv);
