@@ -1,0 +1,1 @@
+ICONID ICON "logo\mosh.ico"
